[metadata]
name = pyrma_matdeiber
version = 0.1.4
author = Mathieu Deiber
author_email = m.deiber@wrl.unsw.edu.au
description = RMA Python Toolbox
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MatDeiber/pyrma
project_urls =
    Bug Tracker = https://github.com/MatDeiber/pyrma/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src